# adventofcode

./: .gitignore  README.md  my_utils.py  pyproject.toml
.github/workflows/: readme-stars.yml
2021/01/: solution.py
2021/02/: solution.py
2021/03/: solution.py
2021/04/: solution.py  test.py
2021/05/: solution.py
2022/19/: solution.py
2023/01/: solution.py
2023/02/: solution.py
2023/03/: solution.py
2023/04/: solution.py
2023/05/: solution.py
2023/06/: solution.py
2023/07/: solution.py
2023/08/: solution.py
2023/09/: solution.py
2023/10/: solution.py
2023/11/: solution.py
2023/12/: solution.py
2023/13/: solution.py
2023/14/: solution.py
2023/15/: solution.py
2023/16/: prompt.md  solution.py
2023/17/: solution.py
2023/18/: solution.py
2023/19/: solution.py
2023/20/: solution.py
2024/01/: prompt.md  solution.py
2024/02/: prompt.md  solution.py
2024/03/: prompt.md  solution.py
2024/04/: prompt.md  solution.py
2024/05/: prompt.md  solution.py
2024/06/: solution.py
2024/07/: prompt.md  solution.py
2024/08/: solution.py
