[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["BaDxKaRMa <bad87karma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
advent-cli = "^0.2.2"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
