[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["BaDxKaRMa <bad87karma@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
advent-cli = "^0.2.2"
loguru = "^0.7.0"
numpy = "^1.25.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
line-length = 88
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
